<resources>
    <string name="app_name">Candy Crew Command</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="about_me">About me</string>
    <string name="description">Description</string>
    <string name="quota">Quota</string>
    <string name="preferences">My preferences</string>

    <string name="song">Song:</string>
    <string name="random">My ideas to improve Loompaland:</string>

    <string name="filter_gender">Gender filter:</string>
    <string name="filter_profession">Profession filter:</string>
    <string name="profession">Profession:</string>

    <string name="filter_profession_hint">Developer</string>
    <string name="filter_button_search">Search</string>


    <string name="gender_both">Both</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="text_no_match"><b><big><big>Oops!</big></big></b>\n All the <b>Oompa Loompas</b> escaped.\nIt seems they don\'t identify with the\n<b><big> search criteria.</big></b></string>

    <string name="workerItemList_avatar_content_description">Worker Avatar Image</string>
    <string name="workerItemList_gender_content_description">Worker Gender Image</string>

    <!-- PlaceHolders -->
    <string name="placeholder_food">Food: %1$s</string>
    <string name="placeholder_color">Color: %1$s</string>
    <string name="placeholder_profession">Profession: %s</string>
    <string name="placeholder_email">Email: %s</string>
    <string name="placeholder_country">From: %s</string>
    <string name="placeholder_age">Age: %d y/o</string>
    <string name="placeholder_height">Height: %d cm</string>
    <string name="placeholder_name">%1$s %2$s</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>