<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context="ui.view.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp">

            <ImageView
                android:id="@+id/worker_list_image_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/worker_list_text_title"
                style="@style/Text.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.2"
                android:text="@string/app_name"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/worker_list_motion_hamburger"
                app:layout_constraintStart_toEndOf="@+id/worker_list_image_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="true" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="60dp" />

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/worker_list_motion_hamburger"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layoutDescription="@xml/activity_main_xml_worker_list_motion_hamburger_scene"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/b1"
                    android:layout_width="32dp"
                    android:layout_height="3dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/b2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/b2"
                    android:layout_width="32dp"
                    android:layout_height="3dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/b3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/b1" />

                <View
                    android:id="@+id/b3"
                    android:layout_width="32dp"
                    android:layout_height="3dp"
                    android:alpha="1"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/b2" />

            </androidx.constraintlayout.motion.widget.MotionLayout>

            <View
                android:id="@+id/worker_list_button_hamburger"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@+id/worker_list_motion_hamburger"
                app:layout_constraintEnd_toEndOf="@+id/worker_list_motion_hamburger"
                app:layout_constraintStart_toStartOf="@+id/worker_list_motion_hamburger"
                app:layout_constraintTop_toTopOf="@+id/worker_list_motion_hamburger" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/worker_list_swipe_refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/worker_list_recycler"
            class="androidx.appcompat.app.AlertController$RecycleListView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_bar_limit"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/item_worker" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/worker_list_layout_filters_dialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_solid"
        android:clickable="true"
        android:elevation="3dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/filter_profession" />

        <AutoCompleteTextView
            android:id="@+id/worker_list_filter_profession_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filter_profession_hint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            style="@style/Text.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/filter_gender" />

        <RadioGroup
            android:id="@+id/worker_list_filter_gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/worker_list_filter_gender_both"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/worker_list_filter_gender_male"
                style="@style/CustomRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_male"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/worker_list_filter_gender_both"
                style="@style/CustomRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_both"
                android:text="@string/gender_both" />

            <RadioButton
                android:id="@+id/worker_list_filter_gender_female"
                style="@style/CustomRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_female"
                android:text="@string/gender_female" />
        </RadioGroup>

        <Button
            android:id="@+id/worker_list_filter_apply_filers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/filter_button_search" />
    </LinearLayout>

    <TextView
        android:id="@+id/worker_list_empty_state_label"
        style="@style/Text.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/text_no_match"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>